--- a/views/app/layout/footer.html
+++ b/views/app/layout/footer.html
@@ -3,12 +3,36 @@
 <footer id="footer-section" class="footer-section w100dt">
 	<div class="container">
 		<ul class="footer-social-links w100dt center-align mb-30">
-			<li><a href="#" class="linkedin" title="@Mreminisce">QQ&nbsp;</a></li>
-			<li><a href="#" class="twitter" title="@舟">微信&nbsp;</a></li>
-			<li><a href="#" class="google-plus" title="1285149688@qq.com">邮箱&nbsp;</a></li>
-			<li><a href="https://music.163.com/#/user/home?id=1333662282" class="pinterest" title="@Mreminisce">网易云</a></li>
-			<li><a href="https://space.bilibili.com/4411497" class="instagram" title="@Mreminisce">Bilibili</a></li>
-			<li><a href="https://github.com/Mreminisce" class="facebook" title="@Mreminisce">Github</a></li>
+			<li>
+				<a href="/contactme.html" class="linkedin" title="@Mreminisce">
+					Q&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Q
+				</a>
+			</li>
+			<li>
+				<a href="/contactme.html" class="twitter" title="@舟">
+					微&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;信
+				</a>
+			</li>
+			<li>
+				<a href="/contactme.html" class="google-plus" title="1285149688@qq.com">
+					邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱
+				</a>
+			</li>
+			<li>
+				<a href="https://music.163.com/#/user/home?id=1333662282" class="pinterest" title="@Mreminisce">
+					网易云音乐
+				</a>
+			</li>
+			<li>
+				<a href="https://space.bilibili.com/4411497" class="instagram" title="@Mreminisce">
+					&nbsp;Bilibili&nbsp;
+				</a>
+			</li>
+			<li>
+				<a href="https://github.com/Mreminisce" class="facebook" title="@Mreminisce">
+					&nbsp;Github&nbsp;
+				</a>
+			</li>
 		</ul>
 		<p class="center-align">
 			<i class="icofont icofont-ssl-security"></i> - 
@@ -25,8 +49,6 @@
 <script type="text/javascript" src="/static/js/owl.carousel.min.js"></script>
 <!-- my custom js -->
 <script type="text/javascript" src="/static/js/custom.js"></script>
-<script type="text/javascript">
-</script>
 <!-- js -->
 <script>
 	var debug = DEBUG = 0;
