--- a/views/app/my/my_favorite.html
+++ b/views/app/my/my_favorite.html
@@ -13,7 +13,7 @@
 			</nav>
 		</div><br>
 		<div class="row">
-			<div class="col m9">
+			<div class="col m9"><br>
 				<div class="card">
 					<div class="table-responsive">
 						<table class="table" style="min-width: 800px">
@@ -80,7 +80,7 @@
 					location.reload()
 				}, 500)
 				} else {
-					$.alert(res.message)
+					alert(res.message)
 					return
 				}
 			}
