--- a/views/app/usercenter/u_info.html
+++ b/views/app/usercenter/u_info.html
@@ -10,7 +10,7 @@
 			</nav>
 		</div><br>
 		<div class="row">
-			<div class="col m9 s12">	
+			<div class="col m9 s12"><br>	
 				<div class="contact-me">
 					<div class="row">
 						<div class="col m2 s12"></div>
@@ -24,7 +24,7 @@
 								</div>
 								<div class="c-text p-0"><br>
 									<span class="text-muted">用户名：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.Username}}<br>
-									<span class="text-muted">收藏数：</span><a href="?my-favorites.htm" target="_blank">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.FavouriteCnt}}</a><br>
+									<span class="text-muted">收藏数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.FavouriteCnt}}<br>
 									<span class="text-muted">文章数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.ArticlesCnt}}<br>
 									<span class="text-muted">回复数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.ReplysCnt}}<br>
 									<span class="text-muted">说说数：</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{.userinfo.SayingsCnt}}<br>
