--- a/views/admin/auser/user_list.html
+++ b/views/admin/auser/user_list.html
@@ -75,12 +75,12 @@
 			success: function(res) {
 				if (res.code == 200) {
 					$(elem).parent().parent().parent().parent().parent().remove()
-					$.alert("用户删除成功 ！")
+					alert("用户删除成功 ！")
 					setTimeout(function () {
                         location.reload()
                     }, 500)
 				} else {
-					$.alert(res.message)
+					alert(res.message)
 				}
 			}
 		})
