--- a/views/admin/layout/adminfooter.html
+++ b/views/admin/layout/adminfooter.html
@@ -1,16 +1,51 @@
 {{ define "layout/adminfooter" }}
-<footer class="text-muted small bg-dark py-4 mt-3" id="footer">
+<footer id="footer-section" class="footer-section w100dt">
 	<div class="container">
-		<div class="row">
-			<div class="col"> Powered by <a href="http://www.xinshulaile.com/" target="_blank" class="text-muted"><b>GORO BBS
-						<span>1.0.1</span></b></a>
-			</div>
-			<div class="col text-right">
-				<b><a href="https://www.github.com/letseeqiji/gorobbs" class="text-muted" target="_blank">github.com/letseeqiji/gorobbs</a></b>
-			</div>
-		</div>
+		<ul class="footer-social-links w100dt center-align mb-30">
+			<li>
+				<a href="/contactme.html" class="linkedin" title="@Mreminisce">
+					Q&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Q
+				</a>
+			</li>
+			<li>
+				<a href="/contactme.html" class="twitter" title="@舟">
+					微&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;信
+				</a>
+			</li>
+			<li>
+				<a href="/contactme.html" class="google-plus" title="1285149688@qq.com">
+					邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱
+				</a>
+			</li>
+			<li>
+				<a href="https://music.163.com/#/user/home?id=1333662282" class="pinterest" title="@Mreminisce">
+					网易云音乐
+				</a>
+			</li>
+			<li>
+				<a href="https://space.bilibili.com/4411497" class="instagram" title="@Mreminisce">
+					&nbsp;Bilibili&nbsp;
+				</a>
+			</li>
+			<li>
+				<a href="https://github.com/Mreminisce" class="facebook" title="@Mreminisce">
+					&nbsp;Github&nbsp;
+				</a>
+			</li>
+		</ul>
+		<p class="center-align">
+			<i class="icofont icofont-ssl-security"></i> - 
+			<a href="http://www.beian.miit.gov.cn">赣ICP备 - 19006549 号</a>
+		</p>
 	</div>
+	<!-- container -->
 </footer>
+<!-- my custom js -->
+<!-- <script type="text/javascript" src="/static/js/jquery-3.1.1.min.js"></script> -->
+<script type="text/javascript" src="/static/js/materialize.js"></script>
+<script type="text/javascript" src="/static/js/owl.carousel.min.js"></script>
+<!-- my custom js -->
+<script type="text/javascript" src="/static/js/custom.js"></script>
 <script src="/static/js/bbs.js?1.0"></script>
 <script src="/static/js/md5.js"></script>
 <div id="scroll_to_top" class="d-fixed" style="position: fixed; bottom: 80px; right: 10px; width: 70px; height: 70px;">
