--- a/views/app/comment/advance_comment.html
+++ b/views/app/comment/advance_comment.html
@@ -102,7 +102,7 @@
 	})
 	jsubmit.on('click', function() {
 		if (CKEDITOR.instances.editor1.getData().length == 0) {
-			$.alert("写点什么再提交吧 ^_^")
+			alert("写点什么再提交吧 ^_^")
 			return;
 		}
 		qrform.reset();
