--- a/views/app/layout/capacha.html
+++ b/views/app/layout/capacha.html
@@ -28,7 +28,7 @@
 					}
 					console.log(captchakey.val())
 				} else {
-					$.alert("系统发生错误，请联系管理员")
+					alert("发生系统错误，请联系管理员")
 				}
 			}
 		})
