--- a/views/app/layout/sidebar.html
+++ b/views/app/layout/sidebar.html
@@ -26,19 +26,19 @@
     <!-- /.sidebar-title -->
     <ul class="followme-links w100dt">
         <li class="mrb15">
-            <a href="#" class="twitter" title="@Mreminisce">
+            <a href="/contactme.html" class="twitter" title="@Mreminisce">
                 <i class="icofont icofont-social-qq"></i>
                 <small class="Followers white-text">QQ</small>
             </a>
         </li>
         <li class="mrb15">
-            <a href="#" class="linkedin" title="@舟">
+            <a href="/contactme.html" class="linkedin" title="@舟">
                 <i class="icofont icofont-social-wechat"></i>
                 <small class="Followers white-text">微信</small>
             </a>
         </li>
         <li class="mrb15">
-            <a href="#" class="facebook" title="1285149688@qq.com">
+            <a href="/contactme.html" class="facebook" title="1285149688@qq.com">
                 <i class="icofont icofont-envelope"></i>
                 <small class="Followers white-text">邮箱</small>
             </a>
