--- a/views/app/my/my_article.html
+++ b/views/app/my/my_article.html
@@ -13,7 +13,7 @@
 			</nav>
 		</div><br>
 		<div class="row">
-			<div class="col m9">
+			<div class="col m9"><br>
 				<div class="card">
 					<div class="table-responsive">
 						<table class="table" style="min-width: 800px">
