--- a/views/app/my/my_edit.html
+++ b/views/app/my/my_edit.html
@@ -11,7 +11,7 @@
 			</nav>
 		</div><br>
 		<div class="row">
-			<div class="col m9 s12">
+			<div class="col m9 s12"><br>
 				<div class="contact-me">
 					<div class="row">
 						<div class="col m1 s12"></div>
@@ -122,7 +122,7 @@
 						location.reload()
 					}, 500)
 				} else {
-					$.alert(res.message)
+					alert(res.message)
 					return
 				}
 			}
