--- a/views/app/my/sidebar.html
+++ b/views/app/my/sidebar.html
@@ -1,36 +1,38 @@
 {{ define "my/sidebar" }}
-<div class="col m3 s12">
+<div class="sidebar col m3 s12">
+    <div class="sidebar-title left-align">
+    </div>
     <ul class="social-link">
         <li>
-            <a href="#" class="facebook">
+            <a href="/contactme.html" class="facebook">
                 <span class="s-icon left"><i class="icofont icofont-social-qq"></i></span>
                 <span class="s-name">  Q    Q  </span>
                 <span class="s-likes right">@Mreminisce</span>
             </a>
         </li>
         <li>
-            <a href="#" class="twitter">
+            <a href="/contactme.html" class="twitter">
                 <span class="s-icon left"><i class="icofont icofont-social-wechat"></i></span>
                 <span class="s-name"> 微  信 </span>
                 <span class="s-likes right">@舟</span>
             </a>
         </li>
         <li>
-            <a href="#" class="google-plus">
+            <a href="https://music.163.com/#/user/home?id=1333662282" class="google-plus">
                 <span class="s-icon left"><i class="icofont icofont-music-disk"></i></span>
                 <span class="s-name">网易云</span>
                 <span class="s-likes right">@Mreminisce</span>
             </a>
         </li>
         <li>
-            <a href="#" class="instagram">
+            <a href="https://space.bilibili.com/4411497" class="instagram">
                 <span class="s-icon left"><i class="icofont icofont-ui-video-play"></i></span>
                 <span class="s-name">Bilibili</span>
                 <span class="s-likes right">@Mreminisce</span>
             </a>
         </li>
         <li>
-            <a href="#" class="dribbble">
+            <a href="https://github.com/Mreminisce" class="dribbble">
                 <span class="s-icon left"><i class="icofont icofont-social-github"></i></span>
                 <span class="s-name">Github</span>
                 <span class="s-likes right">@Mreminisce</span>
