--- a/views/app/user/contactme.html
+++ b/views/app/user/contactme.html
@@ -17,26 +17,28 @@
 						<div class="col m10 s12">
 							<div class="contact-things">
 								<div class="c-text p-0">
-                                    <h4 class="l-blue">欢迎交流探讨和反馈问题</h4><br>
-									<h4 class="l-blue">有兴趣的朋友可以互关</h4>&nbsp;
+                                    <h4 class="l-blue">· 欢迎交流探讨和反馈问题</h4><br>
+									<h4 class="l-blue">· 有兴趣的朋友可以互关</h4>&nbsp;
                                 </div>
                                 <div class="c-text p-0"><br>
                                     <span class="text-muted">
-                                        Q Q：@Mreminisce</span><br>
+                                        1. Q Q：@Mreminisce</span><br>
                                     <span class="text-muted">
-                                        邮箱：1285149688@qq.com</span><br>
+                                        2. 邮箱：1285149688@qq.com</span><br>
                                     <span class="text-muted">
-                                        微信：@舟</span><br>
+                                        3. 微信：@舟</span><br>
                                     <span class="text-muted">
-                                        网易云音乐：@Mreminisce</span><br>
+                                        4. 网易云音乐：@Mreminisce</span><br>
                                     <span class="text-muted">
-                                        Bilibili：@Mreminisce</span><br>	
+                                        5. Bilibili：@Mreminisce</span><br>	
                                     <span class="text-muted">
-                                        Github：@Mreminisce</span><br>	
+                                        6. Github：@Mreminisce</span><br>	
                                     <span class="text-muted">
-                                        知乎：@学渣</span><br>	
+                                        7. 知乎：@学渣</span><br>	
                                     <span class="text-muted">
-                                        微博：@逆抚__</span><br>	
+										8. 微博：@逆抚__</span><br>
+									<span class="text-muted">
+										9. ......</span><br><br><br>	
                                 </div>
 							</div>
 						</div>
